--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,13 @@
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+
 :root {
   background-color: chocolate;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 150px;
 }
