--- a/client/src/components/EditChar.css
+++ b/client/src/components/EditChar.css
@@ -1,5 +1,5 @@
-.new-char {
-  background-color: aquamarine;
+.edit-char {
+  background-color: green;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
