--- a/client/src/components/NotFound.css
+++ b/client/src/components/NotFound.css
@@ -1,5 +1,5 @@
-.new-char {
-  background-color: aquamarine;
+.not-found {
+  background-color: whitesmoke;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
