--- a/client/src/components/HomePage.css
+++ b/client/src/components/HomePage.css
@@ -4,4 +4,10 @@
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+  gap: 10px;
 }
