--- a/client/src/components/NotFound.css
+++ b/client/src/components/NotFound.css
@@ -1,7 +1,12 @@
 .not-found {
-  background-color: whitesmoke;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  padding: 20px;
 }
