Task: Add header and redo grid to fit

--- a/client/src/components/GetChar.css
+++ b/client/src/components/GetChar.css
@@ -1,6 +1,6 @@
 .char-container {
   background-color: antiquewhite;
-  height: 250px;
+  height: fit-content;
   width: 300px;
   padding: 10px;
   border-radius: 10px;
