--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,5 +10,6 @@
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 100px;
+  grid-template-rows: 100px 1fr 100px;
+  max-width: 1000px;
 }
