--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,12 +1,12 @@
-.not-found {
+.header {
+  background-color: cornflowerblue;
   grid-column-start: 1;
   grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 25px;
-  padding: 20px;
+  font-size: 35px;
 }
