--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -2,8 +2,8 @@
   background-color: cornflowerblue;
   grid-column-start: 1;
   grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,4 +19,6 @@
 
 .nav-bar button:hover {
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
 }
