--- a/client/src/components/HomePage.css
+++ b/client/src/components/HomePage.css
@@ -1,5 +1,4 @@
 .home {
-  background-color: burlywood;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
@@ -10,4 +9,7 @@
   justify-content: space-evenly;
   align-content: center;
   gap: 10px;
+  overflow-inline: auto;
+  border: 2px solid black;
+  border-radius: 5px;
 }
