--- a/client/src/components/EditChar.css
+++ b/client/src/components/EditChar.css
@@ -1,7 +1,15 @@
 .edit-char {
-  background-color: green;
+  background-image: linear-gradient(
+    to right,
+    rgba(250, 235, 215, 0.1),
+    rgba(250, 235, 215, 0.5)
+  );
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
+  border-radius: 10px;
+  font-size: 16px;
+  border: 2px solid black;
+  border-radius: 5px;
 }
