--- a/client/src/components/GetChar.css
+++ b/client/src/components/GetChar.css
@@ -4,12 +4,13 @@
     rgba(250, 235, 215, 0.3),
     rgba(250, 235, 215, 0.76)
   );
-
-  height: fit-content;
+  margin: 10px;
+  height: 250px;
   width: 300px;
   padding: 10px;
   border-radius: 10px;
   font-size: 16px;
   border: 2px solid black;
   border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
