--- a/client/src/components/HomePage.css
+++ b/client/src/components/HomePage.css
@@ -7,7 +7,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-content: center;
   gap: 10px;
   overflow-inline: auto;
   border: 2px solid black;
@@ -17,4 +16,5 @@
     rgba(250, 235, 215, 0.1),
     rgba(250, 235, 215, 0.5)
   );
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
