--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  justify-content: space-evenly;
 }
 
 .nav-bar button {
@@ -14,6 +14,7 @@
   height: 40px;
   border-radius: 5px;
   font-size: 18px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .nav-bar button:hover {
