--- a/client/src/components/NewChar.css
+++ b/client/src/components/NewChar.css
@@ -4,7 +4,8 @@
   grid-row-start: 2;
   grid-row-end: 3;
   padding: 20px;
-  border: 2px solid black;
+  margin: 2px solid black;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   font-size: 18px;
   background-image: linear-gradient(
@@ -15,11 +16,12 @@
 }
 
 .new-char button {
-  width: 80px;
-  height: 40px;
+  width: 70px;
+  height: 35px;
   border-radius: 5px;
   font-size: 18px;
   margin: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .new-char button:hover {
@@ -31,28 +33,35 @@
   );
 }
 
-fieldset {
+.fieldset {
   margin: 10px;
+  display: block;
 }
 
-legend {
+.legend {
   padding: 10px;
+  display: block;
 }
 
 label {
   font-size: 20px;
   padding-bottom: 5px;
   padding-top: 5px;
+  display: block;
 }
 
 input {
   height: 30px;
   font-weight: bold;
   padding: 5px;
+  display: block;
+  margin: 10px;
 }
 select {
   height: 30px;
   padding: 5px;
+  display: block;
+  margin: 10px;
 }
 
 input:invalid {
