--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -7,5 +7,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.heading {
   font-size: 35px;
+  border: 2px solid black;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(
+    to right,
+    rgba(250, 235, 215, 0.1),
+    rgba(250, 235, 215, 0.5)
+  );
 }
